--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "parcel-bundler": "^1.10.1",
     "sass": "^1.14.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.0"
   }
 }
